--- a/src/about.njk
+++ b/src/about.njk
@@ -29,7 +29,7 @@ urlo: about
                         <div class="col-lg-6 col-12 mb-2">
                             <h4 class="mb-3">Prem Convertors – Your Trusted Specialty Paper Partner</h4>
 
-                            <a href="/blog.html" class="custom-btn btn btn-dark mt-3">Check out Blogs</a>
+                            <a href="/blog" class="custom-btn btn btn-dark mt-3">Check out Blogs</a>
 
                             <a href="#formi" class="custom-btn btn btn-danger mt-3 ms-3">Say Hi</a>
                         </div>
