--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -44,6 +44,21 @@
           <link rel="preload" as="image" href="/images/blog/muffin-cup.webp" type="image/webp">
 
         {% endif %}
+        {% if page.url == "/blog/" %}
+        
+          <link rel="preload" as="image" href="/images/header/priscilla-du-preez-W3SEyZODn8U-unsplash.webp" type="image/webp">
+
+        {% endif %}
+        {% if page.url == "/about/" %}
+        
+          <link rel="preload" as="image" href="/images/header/briana-tozour-V_Nkf1E-vYA-unsplash.webp" type="image/webp">
+
+        {% endif %}
+        {% if page.url == "/contact/" %}
+        
+          <link rel="preload" as="image" href="/images/header/rod-long-I79Pgmhmy5M-unsplash.webp" type="image/webp">
+
+        {% endif %}
 
         <script type="application/ld+json">
 {
