--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -13,7 +13,7 @@
 
                         <p>Sai Rd, Baddi, Himachal Pradesh, India - 173205</p>
 
-                        <a href="https://maps.app.goo.gl/93R8yfAR8LaW1jzUA" class="custom-btn btn btn-dark mt-2">Directions</a>
+                        <a href="https://maps.app.goo.gl/93R8yfAR8LaW1jzUA" class="custom-btn btn btn-dark mt-2" aria-label="google maps link">Directions</a>
                     </div>
 
                     <div class="col-lg-4 col-md-5 col-xs-12 tooplate-mt30">
@@ -26,7 +26,7 @@
                         <h6 class="text-white mb-lg-4 mb-3">Social</h6>
 
                         <ul class="social-icon">
-                            <li><a href="https://m.facebook.com/people/Prem-Paper_Convertors/61555990806437" class="social-icon-link bi-facebook"></a></li>
+                            <li><a href="https://m.facebook.com/people/Prem-Paper_Convertors/61555990806437" class="social-icon-link bi-facebook" aria-label="Facebook page link"></a></li>
 
                            
                         </ul>
