--- a/src/css/tooplate-crispy-kitchen.css
+++ b/src/css/tooplate-crispy-kitchen.css
@@ -355,6 +355,21 @@ strong {
   overflow: hidden;
   padding-top: 20.542rem;
   padding-bottom: 20.542rem;
+  /* Add other styles for your hero section here, like padding, min-height, etc. */
+  background-image: url("/images/header/priscilla-du-preez-W3SEyZODn8U-unsplash.webp");
+  background-size: cover; /* Ensures the image covers the entire area */
+  background-position: center; /* Centers the image within the container */
+  background-repeat: no-repeat; /* Prevents the image from tiling */
+}
+.hero::before { /* Optional: To apply the brightness filter */
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2); /* Adjust the alpha value for brightness */
+  z-index: 1; /* Ensure it's above the background image but below the content */
 }
 
 .hero .container {
