--- a/src/blog.njk
+++ b/src/blog.njk
@@ -74,7 +74,7 @@ urlo: blog
             {% for post in collections.featured %}
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="news-thumb mb-4">
-                        <a href="{{ post.url }}">
+                        <a href="{{ post.url }}" aria-label="Read more about the blog, {{ post.data.title }}">
                             <img src="{{ post.data.image }}" class="img-fluid news-image" alt="{{ post.data.imageAlt }}">
                         </a>
                         
@@ -82,7 +82,7 @@ urlo: blog
                             <span class="category-tag bg-danger">Featured</span>
 
                             <h5 class="news-title mt-2">
-                                <a href="{{ post.url }}" class="news-title-link">{{ post.data.title }}</a>
+                                <a href="{{ post.url }}" class="news-title-link" aria-label="Read more about the blog, {{ post.data.title }}">{{ post.data.title }}</a>
                             </h5>
                         </div>
                     </div> 
