--- a/src/contact.njk
+++ b/src/contact.njk
@@ -48,4 +48,16 @@ urlo: contact
             </section>
 
         </main>
-        <script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+        <script type="module">
+    document.addEventListener('DOMContentLoaded', function() {
+      const tallyScript = document.createElement('script');
+      tallyScript.src = 'https://tally.so/widgets/embed.js';
+      tallyScript.onload = function() {
+        if (typeof Tally !== 'undefined') Tally.loadEmbeds();
+        else document.querySelectorAll('iframe[data-tally-src]:not([src])').forEach(function(e) {
+          e.src = e.dataset.tallySrc;
+        });
+      };
+      document.body.appendChild(tallyScript);
+    });
+  </script>
