--- a/src/index.njk
+++ b/src/index.njk
@@ -245,4 +245,16 @@ urlo: ''
     color: white; font-size: 12px; font-weight: bold; border-radius: 50%; width: 18px; 
     height: 18px; display: flex; align-items: center; justify-content: center;">.</span>
 </button>
-        <script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+        <script type="module">
+    document.addEventListener('DOMContentLoaded', function() {
+      const tallyScript = document.createElement('script');
+      tallyScript.src = 'https://tally.so/widgets/embed.js';
+      tallyScript.onload = function() {
+        if (typeof Tally !== 'undefined') Tally.loadEmbeds();
+        else document.querySelectorAll('iframe[data-tally-src]:not([src])').forEach(function(e) {
+          e.src = e.dataset.tallySrc;
+        });
+      };
+      document.body.appendChild(tallyScript);
+    });
+  </script>
